--- a/Services/Digital Marketing/DigitalMarketing.html
+++ b/Services/Digital Marketing/DigitalMarketing.html
@@ -30,7 +30,12 @@
       overflow-x: hidden;
     }
 	
-	
+	.main-container {
+      width:100%;
+      max-width:1280px;
+      margin:0 auto;
+      padding:0 24px;
+    }
 
     /* ====== UTILITIES ====== */
   	.container {
@@ -720,6 +725,7 @@
         </div>
     </footer>
 </html>
+
 
 
 
