--- a/pages/contact.html
+++ b/pages/contact.html
@@ -49,7 +49,7 @@
             <section class="contact-section">
                 <div class="form-container">
                     <h2 class="form-title"><span class="gradient-text">Send us a Message</span></h2>
-                    <form id="contact-form">
+                    <form id="contact-form" action="https://formspree.io/f/mblznwwo" method="POST">
                         <div class="form-row">
                             <div class="form-field">
                                 <label class="form-label" for="name">Name</label>
