--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <p class="section-subtitle">
                     Ready to transform your ideas into reality? Get in touch with our expert team today.
                 </p>
-                <form class="contact-form" id="contact-form">
+                <form class="contact-form" id="contact-form" action="https://formspree.io/f/mblznwwo" method="POST">
                     <div class="form-row">
                         <div class="form-group">
                             <label class="form-label" for="name">Name</label>
