--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         BUILD YOUR <span class="gradient-green">NEXT-GEN</span> <span class="gradient-cyan">PRODUCT</span> WITH US
                     </h1>
                     <p class="hero-subtitle">
-                        We build AI-powered SaaS and Blockchain systems to turn your ideas into digital reality.
+                        From idea to launch, we build websites,AI-powered SaaS, apps and platforms ready for real users.
                     </p>
                     <a href="pages/contact.html" class="cta-button">
                         Get Started with logic leafs &rarr;
@@ -332,3 +332,4 @@
     </script>
     </body>
 </html>
+
