--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Logic Leafs | AI & Blockchain Development Company | Next-Gen Tech Solutions</title>
+    <title>Logic Leafs | Websites & Custom Softwares | Next-Gen Tech Solutions</title>
     <meta name="description" content="Transform your business with Logic Leafs' AI-powered software development, blockchain systems, and digital solutions. Expert team delivering scalable technology for startups and enterprises." />
     <meta name="keywords" content="AI development, blockchain technology, software development, digital transformation, startup consulting, web development, mobile apps" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -332,4 +332,5 @@
     </script>
     </body>
 </html>
+
 
