--- a/index.html
+++ b/index.html
@@ -298,11 +298,11 @@
 
                 <div class="footer-col footer-services">
                     <h4 class="footer-title">Our Services</h4>
-                    <a href="pages/services.html" class="footer-link">AI & Software Development</a>
-                    <a href="pages/services.html" class="footer-link">Web & App Development</a>
-                    <a href="pages/services.html" class="footer-link">Digital Marketing</a>
-                    <a href="pages/services.html" class="footer-link">Startup Consulting</a>
-                    <a href="pages/services.html" class="footer-link">R&D Projects</a>
+                    <a href="Services/AI professional/AISoftware.html" class="footer-link">AI & Software Development</a>
+                    <a href="Services/Webapp/WebAppDevelopmentServices.html" class="footer-link">Web & App Development</a>
+                    <a href="Services/Digital Marketing/DigitalMarketing.html" class="footer-link">Digital Marketing</a>
+                    <a href="Services/Startup/StartupTechConsultingServices.html" class="footer-link">Startup Consulting</a>
+                    <a href="Services/R&D/AIRDServicesLandingPage.html" class="footer-link">R&D Projects</a>
                     <a href="pages/services.html" class="footer-link">Training Programs</a>
                 </div>
             </div>
