--- a/pages/services.html
+++ b/pages/services.html
@@ -57,27 +57,7 @@
                 </p>
 
                 <div class="services-grid">
-                    <article class="service-card">
-                        <div class="service-header">
-                            <div class="service-icon">
-                                <img src="../assets/images/img_hugeicons_neural_network.svg" alt="AI Development icon" width="38" height="38" />
-                            </div>
-                            <h3 class="service-title">AI & Software Development</h3>
-                        </div>
-                        <p class="service-description">Transform your business with intelligent solutions</p>
-                        <ul class="service-features">
-                            <li>Custom AI model development</li>
-                            <li>Machine Learning solutions</li>
-                            <li>Predictive analytics systems</li>
-                            <li>Natural Language Processing (NLP)</li>
-                            <li>Computer Vision applications</li>
-                            <li>Chatbot and voicebot development</li>
-                        </ul>
-                        <a href="../Services/AI professional/AISoftware.html" class="learn-more-btn">
-                            Learn More
-                            <img src="../assets/images/img_bxs_right_arrow.svg" alt="Arrow" width="22" height="22" />
-                        </a>
-                    </article>
+                    
 
                     <article class="service-card">
                         <div class="service-header">
@@ -95,6 +75,28 @@
                             <li>Progressive Web Apps (PWAs)</li>
                         </ul>
                         <a href="../Services/Webapp/WebAppDevelopmentServices.html" class="learn-more-btn">
+                            Learn More
+                            <img src="../assets/images/img_bxs_right_arrow.svg" alt="Arrow" width="22" height="22" />
+                        </a>
+                    </article>
+
+                    <article class="service-card">
+                        <div class="service-header">
+                            <div class="service-icon">
+                                <img src="../assets/images/img_hugeicons_neural_network.svg" alt="AI Development icon" width="38" height="38" />
+                            </div>
+                            <h3 class="service-title">AI & Software Development</h3>
+                        </div>
+                        <p class="service-description">Transform your business with intelligent solutions</p>
+                        <ul class="service-features">
+                            <li>Custom AI model development</li>
+                            <li>Machine Learning solutions</li>
+                            <li>Predictive analytics systems</li>
+                            <li>Natural Language Processing (NLP)</li>
+                            <li>Computer Vision applications</li>
+                            <li>Chatbot and voicebot development</li>
+                        </ul>
+                        <a href="../Services/AI professional/AISoftware.html" class="learn-more-btn">
                             Learn More
                             <img src="../assets/images/img_bxs_right_arrow.svg" alt="Arrow" width="22" height="22" />
                         </a>
@@ -146,7 +148,7 @@
                             <div class="service-icon">
                                 <img src="../assets/images/img_hugeicons_blockchain_01.svg" alt="Blockchain icon" width="38" height="38" />
                             </div>
-                            <h3 class="service-title">Blockchain Development & R&D</h3>
+                            <h3 class="service-title">Research & Development</h3>
                         </div>
                         <p class="service-description">Pushing the boundaries of innovation</p>
                         <ul class="service-features">
