--- a/pages/services.html
+++ b/pages/services.html
@@ -239,7 +239,7 @@
 
                 <div class="footer-col footer-services">
                     <h4 class="footer-title">Our Services</h4>
-                    <a href="../Services/AI professional/index.html" class="footer-link">AI & Software Development</a>
+                    <a href="../../Services/AI professional/index.html" class="footer-link">AI & Software Development</a>
                     <a href="../Services/Webapp/index.html" class="footer-link">Web & App Development</a>
                     <a href="../Services/Digital Marketing/index.html" class="footer-link">Digital Marketing</a>
                     <a href="../Services/Startup/index.html" class="footer-link">Startup Consulting</a>
@@ -271,3 +271,4 @@
     </script>
     </body>
 </html>
+
